fixed date overlaping in restaurant reviews on small screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -498,4 +498,10 @@ nav h1 a {
     margin: 0;
     margin-bottom: 15px;
   }
+
+  #reviews-container .review-heading .reviewer-name {
+    font-size: 21px;
+    flex: 1;
+  }
+
 }
